Fixed tings
now it doesn't look AS bad as before

--- a/sidebar-style.css
+++ b/sidebar-style.css
@@ -29,13 +29,13 @@ h1 {
 
 p1 {
     font-weight: bold;
-    font-size: 15px;
+    font-size: 12px;
     word-wrap: break-word;
 }
 
 p2 {
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 #closeButton {
